--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">DevHacksApp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="scan">Scan</string>
+    <string name="scan">Tap To Scan</string>
     <string name="lostDeviceText">Find My Lost Item</string>
     <string name="date">Date %s</string>
 </resources>
